--- a/.gitignore
+++ b/.gitignore
@@ -138,11 +138,13 @@ celerybeat.pid
 .env
 .envrc
 .venv
+.vscode
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+database/
 
 # Spyder project settings
 .spyderproject
